Correção de nomes.

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -93,7 +93,7 @@ jnlp.descriptor=application
 jnlp.enabled=false
 jnlp.offline-allowed=false
 jnlp.signed=false
-main.class=mygame.Jogo
+main.class=packageSpaceRunner.SpaceRunner
 meta.inf.dir=${src.dir}/META-INF
 manifest.file=MANIFEST.MF
 mkdist.disabled=false
